--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,15 @@ jobs:
       run: |
         sudo apt update
         sudo apt -y install build-essential tree
-        sudo cpan install Module::Build
+        sudo cpan install Data::Table::Text Module::Build Digest::SHA1 JSON
+
+    - name: InstallDataNFA
+      run: |
+        sudo cpan install Data::NFA
+
+    - name: InstallDataTableText
+      run: |
+        sudo cpan install Data::Table::Text
 
 
 
